feat: Initial project structure for BookLog web application
- Set up basic directory structure for frontend (Next.js) and backend (Node.js).
- Create initial files for both frontend and backend.
- Add a comprehensive .gitignore file.
- Include GEMINI.md for project planning and context.

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,46 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
+# Dependencies
+**/node_modules
+.pnp
 .pnp.js
 
-# testing
-/coverage
+# Build outputs & Caches
+**/.next/
+**/out/
+**/build/
+**/dist/
+*.tsbuildinfo
+next-env.d.ts
 
-# next.js
-/.next/
-/out/
+# Testing
+**/coverage
 
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Log files
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# Local env files
 .env
+.env*.local
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Backend specific
+backend/db.json
+
+# IDEs / Editor-specific
+.vscode/
+.idea/
+*.sublime-workspace
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
